--- a/benoit_mathiez_penduv2/App.xaml
+++ b/benoit_mathiez_penduv2/App.xaml
@@ -3,7 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:benoit_mathiez_penduv2"
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
-         
+        <Style x:Key="DefaultButton" TargetType="Button">
+            <Setter Property="Border.CornerRadius" Value="50" />
+        </Style>
     </Application.Resources>
 </Application>
