--- a/benoit_mathiez_penduv2/App.xaml
+++ b/benoit_mathiez_penduv2/App.xaml
@@ -12,7 +12,7 @@
             <Setter Property="Background" Value="{StaticResource ButtonBackground}" />
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Margin" Value="5,5,5,5"/>
-            <Setter Property="FontSize" Value="50"/>
+            <Setter Property="FontSize" Value="35"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
@@ -38,6 +38,19 @@
             </Setter>
         </Style>
 
+        <Style x:Key="ResetButton" TargetType="Button">
+            <Setter Property="Background" Value="{StaticResource ButtonMainBG}" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
 
     </Application.Resources>
